argocd-acebook-beta/front-demo/acebook-front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acebookfront-beta
  namespace: acebook-beta
  labels:
    app: acebookfront-beta
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: acebookfront-beta
  template:
    metadata:
      labels:
        app: acebookfront-beta
    spec:
      containers:
      - image: intjborj/front-demo:v2
        name: acebookfront-beta
        ports:
            - containerPort: 3000
        volumeMounts:
            - mountPath: /usr/src/app/acebook_beta/front/public/uploads
              name: front-data-beta
      volumes:
        - name: front-data-beta
          persistentVolumeClaim:
            claimName: pvc-upload-beta
---

apiVersion: v1
kind: Service
metadata:
  name: acebookfront-beta
  namespace: acebook-beta
  labels:
    app: acebookfront-beta
spec:
  ports:
  - port: 3000
    protocol: TCP
    name: acebookfront-beta
  selector:
    app: acebookfront-beta
  sessionAffinity: None
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: acebookfront-beta
  namespace: acebook-beta
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    # cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    # nginx.org/websocket-services: "graphql"
#    nginx.ingress.kubernetes.io/rewrite-target: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.org/client-max-body-size: "50m"
    # nginx.ingress.kubernetes.io/server-snippets: |
    #  location / {
    #   proxy_set_header Upgrade $http_upgrade;
    #   proxy_http_version 1.1;
    #   proxy_set_header X-Forwarded-Host $http_host;
    #   proxy_set_header X-Forwarded-Proto $scheme;
    #   proxy_set_header X-Forwarded-For $remote_addr;
    #   proxy_set_header Host $host;
    #   proxy_set_header Connection "upgrade";
    #   proxy_cache_bypass $http_upgrade;
    #   }

spec:
  # tls:
  #   - hosts:
  #       - acebook-beta.acemcbohol.ph
  #     secretName: acebook-front-beta-tls-secret
  ingressClassName: nginx
  rules:
  - host: 192.168.254.240.getmoss.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: acebookfront-beta
            port:
              number: 3000
